--- a/Jelly/lhylibrary/src/main/res/values/styles.xml
+++ b/Jelly/lhylibrary/src/main/res/values/styles.xml
@@ -20,4 +20,10 @@
     <style name="toolbar_theme">
         <item name="colorControlNormal">@color/white</item>
     </style>
+
+    <style name="Transparent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+
+    </style>
 </resources>
