--- a/Jelly/app/src/main/res/values/styles.xml
+++ b/Jelly/app/src/main/res/values/styles.xml
@@ -6,4 +6,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="tab_textview">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:textColor">@drawable/tab_text_color</item>
+        <item name="android:drawableTop">@drawable/tab_text_drawable</item>
+    </style>
 </resources>
