--- a/Jelly/app/src/main/res/layout/fragment_video.xml
+++ b/Jelly/app/src/main/res/layout/fragment_video.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <lhy.ijkplayer.media.IjkVideoView
-        android:id="@+id/ijkView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rlv_video"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="video" />
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
