--- a/Jelly/app/src/main/res/layout/activity_main.xml
+++ b/Jelly/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
-    tools:context="lhy.jelly.ui.MainActivity">
+    tools:context=".ui.main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
+       <FrameLayout
+           android:id="@+id/fl_content"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:layout_weight="1"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
