--- a/Jelly/lhylibrary/src/main/res/values/colors.xml
+++ b/Jelly/lhylibrary/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="white_gray">#d1cccc</color>
+    <color name="color_333">#333333</color>
+    <color name="color_666">#666666</color>
+    <color name="color_999">#999999</color>
 </resources>
