--- a/Jelly/app/src/main/res/layout/item_music.xml
+++ b/Jelly/app/src/main/res/layout/item_music.xml
@@ -8,43 +8,50 @@
 
     <lhy.lhylibrary.view.roundImageView.RoundedImageView
         android:id="@+id/img_music"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_margin="5dp"
+        android:scaleType="centerCrop"
         app:riv_corner_radius="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:src="@mipmap/test" />
 
     <TextView
         android:id="@+id/text_music_name"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_height="35dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="5dp"
+        android:gravity="center_vertical|left"
         android:textColor="@color/color_333"
         app:layout_constraintLeft_toRightOf="@+id/img_music"
         app:layout_constraintTop_toTopOf="@id/img_music"
+        android:maxLines="1"
         tools:text="标题" />
 
     <TextView
         android:id="@+id/text_music_artist"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_height="35dp"
         android:layout_marginLeft="15dp"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|left"
         android:textColor="@color/color_333"
         app:layout_constraintBottom_toBottomOf="@id/img_music"
         app:layout_constraintLeft_toRightOf="@+id/img_music"
+        app:layout_constraintRight_toLeftOf="@+id/ibt_music_info"
+        android:maxLines="1"
         tools:text="周杰伦" />
 
     <ImageButton
         android:id="@+id/ibt_music_info"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:background="@drawable/ic_more_vert_black_24dp" />
+        android:background="@drawable/ic_more_vert_black_24dp" />
 
     <View
         android:layout_width="match_parent"
