--- a/Jelly/app/src/main/res/layout/fragment_video.xml
+++ b/Jelly/app/src/main/res/layout/fragment_video.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rlv_video"
+    <lhy.ijkplayer.media.IjkVideoView
+        android:id="@+id/ijk_video"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintVertical_weight="1"
-        app:layout_constraintTop_toBottomOf="@id/appbar" />
+        android:layout_height="200dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/rlv_video"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/appbar"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent" />-->
+
+</LinearLayout>
