--- a/Jelly/app/src/main/res/layout/item_video.xml
+++ b/Jelly/app/src/main/res/layout/item_video.xml
@@ -1,36 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_margin="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <lhy.ijkplayer.media.IjkVideoView
+    android:layout_height="200dp">
+
+
+    <lhy.jelly.view.VideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        app:layout_constraintTop_toTopOf="@id/video_view"
-        android:alpha="0.7"
-        android:gravity="start|center_vertical"
-        android:paddingLeft="10dp"
-        android:text="国家主席习近平近日要88了"/>
-    <Button
-        android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="start"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/video_view"/>
-    <Button
-        android:id="@+id/btn_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="pause"
-        app:layout_constraintBottom_toBottomOf="@id/video_view"
-        app:layout_constraintLeft_toRightOf="@+id/btn_start"/>
+        android:layout_height="200dp" />
 </android.support.constraint.ConstraintLayout>
