--- a/Jelly/app/src/main/res/layout/fragment_video.xml
+++ b/Jelly/app/src/main/res/layout/fragment_video.xml
@@ -7,16 +7,16 @@
 
     <include layout="@layout/toolbar" />
 
-    <lhy.ijkplayer.media.IjkVideoView
-        android:id="@+id/ijk_video"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
-
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/rlv_video"-->
+    <!--<lhy.ijkplayer.media.IjkVideoView-->
+        <!--android:id="@+id/ijk_video"-->
         <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@id/appbar"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent" />-->
+        <!--android:layout_height="200dp"/>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rlv_video"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </LinearLayout>
