--- a/Jelly/app/src/main/res/layout/item_video.xml
+++ b/Jelly/app/src/main/res/layout/item_video.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp">
 
 
-    <lhy.jelly.view.VideoView3
+    <lhy.jelly.view.LhyVideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
