--- a/Jelly/app/src/main/res/layout/view_video_controller2.xml
+++ b/Jelly/app/src/main/res/layout/view_video_controller2.xml
@@ -4,19 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <ImageView
         android:id="@+id/iv_thumb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/test1" />
-
-    <ImageView
-        android:id="@+id/iv_play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/video_play_selector" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -26,25 +18,8 @@
         android:layout_gravity="center"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:id="@+id/ll_error"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/text_retry"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text="点击重试"
-            android:textColor="@color/color_333" />
-    </LinearLayout>
-
     <RelativeLayout
-        android:id="@+id/rl_play"
+        android:id="@+id/play_ui"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -105,18 +80,4 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_wifi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/text_continue_play"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text="继续播放"
-            android:textColor="@color/color_333" />
-    </RelativeLayout>
 </merge>
