--- a/Jelly/app/src/main/res/layout/activity_login.xml
+++ b/Jelly/app/src/main/res/layout/activity_login.xml
@@ -24,5 +24,7 @@
         android:id="@+id/btn_login"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:hint="请输入账号" />
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:hint="登陆" />
 </LinearLayout>
